<resources>
    <string name="app_name">My Garden</string>
    <string name="app_logo">App Logo</string>
    <string name="plants_tab">PLANTS</string>
    <string name="search_tab">SEARCH</string>
    <string name="search">Search in Trefle.io</string>
    <string name="add_plant_photo">Add plant photo</string>
    <string name="info_icon">Trefle Info</string>
    <string name="thumbnail">Plant thumbnail</string>
    <string name="new_plant_name">Name</string>
    <string name="new_plant_description">Description</string>
    <string name="new_plant_add_button">ADD</string>
    <string name="new_plant_add_button_loading">LOADING...</string>
    <string name="trefle_common_name">Common name:  </string>
    <string name="trefle_scientific_name">Scientific name:  </string>
    <string name="trefle_genus">Genus:  </string>
    <string name="trefle_division">Division:  </string>
    <string name="trefle_family">Family:  </string>
    <string name="save_button">SAVE</string>
    <string name="empty_recycler_trefle_info">Search for plants in Trefle.io</string>
    <string name="empty_recycler_no_results">No results</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="delete_button">Delete</string>
    <string name="search_view">Search</string>
    <string name="create_new_plant">Create new Plant</string>
    <string name="write_plant_name">Write plant name</string>
</resources>
